Changed picture, fixed navbar link spacing

--- a/styles.css
+++ b/styles.css
@@ -102,8 +102,8 @@ p.lead {
 }
 
 .navbar-img {
-    width: 105px;
-    height: 105px;
+    width: 15rem;
+    height: 15rem;
     float: none;
     margin: 0 auto 20px;
 }
@@ -113,8 +113,8 @@ p.lead {
 }
 
 .navbar-brand .img-profile {
-    max-width: 10rem;
-    max-height: 10rem;
+    max-width: 15rem;
+    max-height: 15rem;
     border: 0.5rem solid rgba(255, 255, 255, 0.2);
 }
 
@@ -127,12 +127,13 @@ li.nav-item {
     text-align: center;
     display: block;
     width: 20rem;
+    height: 4rem;
 }
 
 .nav-link{
     font-weight: 800;
     letter-spacing: 0.1rem;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     text-transform: uppercase;
     display: block;
 }
